--- a/src/app/courses-list/courses-list.component.html
+++ b/src/app/courses-list/courses-list.component.html
@@ -1,7 +1,13 @@
 <ul>
-  <li>Angular</li>
-  <li>React</li>
-  <li>Vue</li>
+  <li>
+    <a [routerLink]="'/cursos/angular'" routerLinkActive="ativo">Angular</a>
+  </li>
+  <li>
+      <a [routerLink]="'/cursos/react'" routerLinkActive="ativo">React</a>
+  </li>
+  <li>
+      <a [routerLink]="'/cursos/vue'" routerLinkActive="ativo">Vue</a>
+  </li>
 </ul>
 
 {{ name }}
