--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 
-<h1>ABC</h1>
-
-<router-outlet></router-outlet>
-
-<h2>DEF</h2>
-
-<a routerLink="/cursos/angular" >Entrar</a>
-
-<lib-my-library></lib-my-library>
+<app-my-button>
+    CLICK ME
+</app-my-button>
