--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,6 @@
 {{ 1332.15 | number }}
 
 
-<div i18n="Nome de usuario | Exibe o nome do usuario logado no sistema" >Name</div>
+<div i18n-title="title do nome" title="my name" i18n="Nome de usuario | Exibe o nome do usuario logado no sistema" >
+    Name
+</div>
