--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,10 @@
         other { {{numeroPessoas}} pessoas }
     }
 </span>
+
+<p i18n >
+    Animal: {genero, select, 
+        f { leoa }
+        m { leão }
+    }
+</p>
