--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1>{{ title }}</h1>
+<img rollOnScroll class="pokeball-back" src="//hanashiro.github.io/pokedex/images/pokeball.svg" />
 
-<router-outlet></router-outlet>
+<app-list></app-list>
