--- a/src/app/modules/pokedex/views/information/information.component.html
+++ b/src/app/modules/pokedex/views/information/information.component.html
@@ -13,11 +13,11 @@
 
 <table class="stats" >
   <tr>
-    <td>Attack</td>
-    <td>Defense</td>
-    <td>Sp Atk</td>
-    <td>Sp Def</td>
-    <td>Speed</td>
+    <td i18n >Attack</td>
+    <td i18n >Defense</td>
+    <td i18n >Sp Atk</td>
+    <td i18n >Sp Def</td>
+    <td i18n >Speed</td>
   </tr>
   <tr>
     <td>{{pokemon.attack}}</td>
