--- a/src/app/modules/pokedex/views/list/list.component.html
+++ b/src/app/modules/pokedex/views/list/list.component.html
@@ -1,4 +1,4 @@
-<input  [(ngModel)]="nameFilter" type="text" id="poke-filter" placeholder="Search" maxlength="20" >
+<input  [(ngModel)]="nameFilter" type="text" id="poke-filter" i18n-placeholder placeholder="Search" maxlength="20" >
 
 <img [src]="pkmSprite" class="selected-pkm" *ngIf="selectedPkm !== null"  >
 
